<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:background="@drawable/imagemagenda"
        >
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            android:layout_height="0dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:ems = "6"
            android:id="@+id/textView"
            style="@style/padraoCaixaTxt"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/nome"
            app:layout_constraintVertical_bias="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            style="@style/padraoCaixaTxt"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/telefone"
            app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:id="@+id/telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefone"
            style="@style/padraoCaixaTxt"
            android:inputType="number"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toStartOf="@+id/nome"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            app:layout_constraintBottom_toTopOf="@+id/buttonPessoal"/>

    <RadioButton
            android:id="@+id/buttonPessoal"
            android:gravity="center"
            android:text="@string/radioB_pessoal"
            style="@style/radioButton"
            android:textSize="20sp"
            android:checked="true"
            android:layout_marginTop="15dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintStart_toStartOf="@+id/telefone"
            app:layout_constraintTop_toBottomOf="@id/telefone"
            app:layout_constraintBottom_toTopOf="@id/buttonTrabalho"
            android:layout_height="40dp"
            android:layout_width="133dp">
    </RadioButton>

    <RadioButton
            android:id="@+id/buttonTrabalho"
            style="@style/radioButton"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/radioB_trabalho"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintStart_toStartOf="@+id/buttonPessoal"
            app:layout_constraintTop_toBottomOf="@+id/buttonPessoal"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/referencia"
            android:layout_height="40dp"
            android:layout_width="133dp">
    </RadioButton>

    <EditText
            android:id="@+id/referencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/padraoCaixaTxt"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/buttonTrabalho"
            app:layout_constraintTop_toBottomOf="@+id/buttonTrabalho"
            app:layout_constraintBottom_toTopOf="@+id/saveB"/>

    <Button
            android:id="@+id/saveB"
            android:layout_width="107dp"
            android:layout_height="51dp"
            android:text="@string/buttom_save"
            style="@style/padraobutton"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/referencia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/constraintLayout2"
            >
    <View
            android:layout_width="317dp"
            android:layout_height="3dp"
            android:background="@color/strongPink"
            android:id="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/pesquisar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
    />


    <EditText
            android:id="@+id/pesquisar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pesquisar"
            android:ems="10"
            style="@style/padraoCaixaTxt"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginTop="15dp"
    />
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_search"
            android:id="@+id/imageButton"
            android:background="@color/strongPink"
            app:layout_constraintStart_toEndOf="@+id/pesquisar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pesquisar"
          />

    <TextView
            android:id="@+id/contatostxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            style="@style/padraoCaixaTxt"
            android:ems="10"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/pesquisar"
            app:layout_constraintTop_toBottomOf="@+id/pesquisar"/>

    <Button
            android:id="@+id/mostrarcontatosB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttom_mostrartodos"
            style="@style/padraobutton"
            android:textSize="15sp"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contatostxt"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
